Name:                tzworld-spock
Version:             0.1
Synopsis:            Spock web service for finding a time zone by location 
Description:         Spock web service for finding a time zone by location 
License:             MIT
Author:              Dan Plubell
Maintainer:          danplubell@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable tzworld-spock
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                  base                      >= 4     && < 5
                , aeson                     >= 0.8   && < 1.0
                , bytestring                >= 0.9.1 && < 0.11
                , text
                , Spock                     >= 0.7.0.0
                , transformers              >= 0.3
                , tzworld-api
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
